refactor getConnections by using PagingAndSortingRepo